# omniclip

./: .gitignore  Jenkinsfile  PROJECT_SETUP.md  PUBLISHERS_GUIDE.md  apple_notarization_todo.md  docker-compose.yml  implementation_plan.md
.github/workflows/: android.yml  build.yml  server-check.yml
omniclip-admin/: Dockerfile  index.html  package-lock.json  package.json
omniclip-admin/src/: App.css  App.tsx
omniclip-client/: package-lock.json  package.json
omniclip-client/src/: App.css  App.tsx
omniclip-client/src-tauri/: Cargo.toml  tauri.conf.json
omniclip-client/src-tauri/src/: crypto.rs  main.rs  tests.rs  watcher.rs  ws_client.rs
omniclip-server/: .env.example  Cargo.toml  Dockerfile  SETUP.md  docker-compose.yml
omniclip-server/.cargo/: config.toml
omniclip-server/logs/: omniclip-server.log.2026-03-13
omniclip-server/migrations/: 20260312000000_initial.sql  20260313000000_device_management.sql
omniclip-server/src/: admin.rs  auth.rs  logs.rs  main.rs  relay.rs
omniclip-web/: Dockerfile  Jenkinsfile  biome.json  docker-compose.yml  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
omniclip-web/.github/workflows/: deploy.yml
omniclip-web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
omniclip-web/app/admin/: actions.ts  layout.tsx
omniclip-web/app/download/: actions.ts  download-client.tsx  (+1 more)
omniclip-web/components/: conditional-navbar.tsx  cta-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  navbar.tsx  roadmap-section.tsx
omniclip-web/lib/: auth.ts
omniclip-web/types/: index.ts
(+10 files in other folders)
