[package]
name = "omniclip-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-updater = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
